Agregar traducciones para esquemas de vacunación y mensajes relacionados

--- a/translations/en.json
+++ b/translations/en.json
@@ -4,13 +4,19 @@
   "explainer": "The following examples demonstrate some key features of the O3 framework",
   "manageVaccinationSchedule": "Manage Schedule",
   "name": "Name",
+  "noSchemas": "No schemas available",
   "noSearchItems": "No vaccines found",
+  "schedule": "Esquema de Vacunación",
   "schemaBuilder": "Vaccination Schema Builder",
+  "searchSchemas": "Search Schemas",
   "searchVaccination": "Search Vaccine",
   "searchVaccines": "Search Vaccines",
+  "selectedSchema": "Selected Schema",
   "selectedVaccine": "Selected Vaccine",
+  "selectSchema": "Select a Schema",
   "selectVaccine": "Select a Vaccine",
   "submit": "Submit",
+  "unnamedProgram": "Unnamed Program",
   "uuid": "UUID",
   "vaccinationScheduleBuilder": "Vaccination Schedule",
   "vaccine": "Vaccine",
