Actualizar traducción para el título del gestor de casos y agregar archivo de traducciones en español

--- a/translations/es.json
+++ b/translations/es.json
@@ -1,1 +1,179 @@
-{}
+{
+  " ": "Gestor de Casos",
+  "accidentOrTrauma": "Accidente o Trauma",
+  "actions": "Acciones",
+  "activeCases": "Casos activos",
+  "add": "Agregar",
+  "addCase": "Agregar caso",
+  "addPeer": "Agregar Par",
+  "addPNSContact": "Agregar Contacto PNS",
+  "addRelationship": "Agregar relación",
+  "admissionDate": "Fecha de Ingreso",
+  "admissionWard": "Sala de Ingreso",
+  "admittingDoctor": "Médico Admisor",
+  "age": "Edad",
+  "alcoholUse": "Consumo de Alcohol",
+  "alcoholUseDuration": "Duración de Consumo de Alcohol",
+  "alive": "Vivo",
+  "all": "Todos",
+  "ancVisitNumber": "Número de Visita de Control Prenatal",
+  "antenatalCare": "Control Prenatal",
+  "babyGivenVitaminD": "Vitamina K Administrada al Bebé",
+  "baselineHivStatus": "Estado VIH Basal",
+  "beds": "Camas",
+  "birthInjuriesTrauma": "Traumatismos/lesiones al Nacer",
+  "bloodGroup": "Grupo Sanguíneo",
+  "bloodLoss": "Transfusión de Sangre Realizada",
+  "bloodTransfusion": "Transfusión de Sangre",
+  "caseEncounter": "Encuentros de gestión de casos",
+  "causeOfDeath": "Causa de Muerte",
+  "cervicalDilation": "Dilatación Cervical (cm)",
+  "chartView": "Vista Gráfica",
+  "chronicDisease": "Enfermedad Crónica",
+  "clientEligibility": "Elegible",
+  "clinicalEncounter": "Encuentro Clínico",
+  "clinicalViews": "Vistas clínicas",
+  "completed": "Completado",
+  "completedDocumentations": "Documentación Completada",
+  "contact": "Contacto",
+  "contactCreated": "Contacto creado",
+  "contacted": "Contactado",
+  "contactList": "Lista de contactos",
+  "customViews": "En esta sección encontrarás vistas clínicas personalizadas según condiciones del paciente y programas de atención.",
+  "date": "Fecha",
+  "dateDate": "Fecha y hora",
+  "dateOfDelivery": "Fecha de Parto",
+  "dateOfSurgery": "Fecha de Cirugía",
+  "dead": "Fallecido",
+  "defaulterTracing": "Seguimiento de Incumplidores",
+  "delete": "Eliminar",
+  "deliveryDate": "Fecha de Parto",
+  "deliveryOutcome": "Resultado del Parto",
+  "department": "Departamento",
+  "descentOfHead": "Descenso de la Cabeza",
+  "disabilities": "Discapacidades",
+  "discard": "Descartar",
+  "dischargeDate": "Fecha de Alta",
+  "dischargingDoctor": "Médico de Alta",
+  "discontinuationCases": "Casos de discontinuación",
+  "edit": "Editar",
+  "editEncounter": "Editar",
+  "editForm": "Editar Formulario",
+  "editThisEncounter": "Editar este encuentro",
+  "encounterDate": "Fecha",
+  "encounterDeleted": "Encuentro eliminado",
+  "encounterDetails": "Detalles del encuentro",
+  "encounters": "Encuentros",
+  "encountersDescription": "Lista de encuentros durante la visita actual",
+  "encountersList": "Lista de encuentros",
+  "encounterType": "Tipo de Encuentro",
+  "endDate": "Fecha Final",
+  "endRelationship": "Terminar relación",
+  "enterForm": "Ingresar formulario",
+  "error": "Error",
+  "errorFetchingbedInformation": "Error al obtener información de camas",
+  "facility": "Establecimiento",
+  "failedDeleting": "no se pudo eliminar",
+  "familyContacts": "Contactos familiares",
+  "feedingOrders": "Órdenes de Alimentación",
+  "fetalHeartRate": "Frecuencia Cardíaca Fetal",
+  "filterByForm": "Filtrar por formulario",
+  "filterByStatus": "Filtrar por estado",
+  "finalDiagnosis": "Diagnóstico Final",
+  "finalDischargeDiagnosis": "Diagnóstico Final al Alta",
+  "finalOutcome": "Resultado Final",
+  "foetalPresentation": "Presentación Fetal",
+  "followUpDate": "Próxima fecha de seguimiento",
+  "formName": "Nombre del Formulario",
+  "gestationalSize": "Tamaño Gestacional",
+  "hivStatus": "Estado de VIH",
+  "hivTestResults": "Resultados de VIH",
+  "htsClinicalView": "Vista Clínica HTS",
+  "htsInitial": "Prueba Inicial HTS",
+  "htsResult": "Resultado final",
+  "htsScreening": "Tamizaje HTS",
+  "htsTestType": "Tipo de prueba",
+  "inPatient": "Paciente Internado",
+  "inPatientForms": "Formularios de Paciente Internado",
+  "inPatientSummary": "Resumen de Paciente Internado",
+  "inPatientView": "Vista de Paciente Internado",
+  "inPatientVisitMessage": "encuentro de paciente interno encontrado para la visita actual {{visitType}}",
+  "ipvOutcome": "Resultado de IPV",
+  "labourAndDelivery": "Trabajo de Parto y Parto",
+  "listingDate": "Fecha de registro",
+  "livingWithClient": "Convive con el paciente",
+  "managePeers": "Gestionar Pares",
+  "maternalCondition": "Condición Materna",
+  "maternalSummary": "Resumen Materno",
+  "medicalHistory": "Historial Médico",
+  "missedAppointmentDate": "Fecha de Cita Incumplida",
+  "modeOfDelivery": "Modalidad del Parto",
+  "motherGeneralCondition": "Condición general de la madre",
+  "name": "Nombre",
+  "neonatalAbnormalities": "Anormalidades Neonatales",
+  "neonatalProblems": "Problemas Neonatales",
+  "neonatalSummary": "Resumen Neonatal",
+  "nextVisitDate": "Próxima fecha de visita",
+  "noContactToDisplay": "No hay datos de contacto para mostrar",
+  "noEncounters": "No se encontraron encuentros",
+  "noEncounterToDisplay": "No hay encuentros para mostrar",
+  "noObservationsFound": "No se encontraron observaciones",
+  "operatingDoctor": "Médico Operador",
+  "otherRelationships": "Otras Relaciones",
+  "otherSubstanceAbuse": "Consumo de Otras Sustancias",
+  "partnerStatus": "Estado VIH de la pareja",
+  "partograph": "Partograma",
+  "partographData": "Componentes Vitales",
+  "peerCalendar": "Calendario de Pares",
+  "pending": "Pendiente",
+  "pendingDocumentations": "Documentación Pendiente",
+  "placeOfDelivery": "Lugar del Parto",
+  "pnsAproach": "Enfoque PNS",
+  "populationType": "Tipo de población",
+  "postnatalCare": "Control Postnatal",
+  "postOperativeComplications": "Complicaciones Postoperatorias",
+  "postOperativeDiagnosis": "Diagnóstico Postoperatorio",
+  "pphCondition": "PPH presente",
+  "primaryDiagnosis": "Diagnóstico Primario",
+  "priorityOfAdmission": "Prioridad de Ingreso",
+  "provider": "Proveedor",
+  "recommendedProcedure": "Procedimiento Recomendado",
+  "recordLabourDetails": "Registrar detalles del parto",
+  "referrals": "Derivaciones",
+  "relation": "Parentesco",
+  "relationshipConfirmationText": "Esto terminará la relación. ¿Está seguro de continuar?",
+  "relationshipError": "Error de Relación",
+  "relationshipErrorMessage": "Solicitud Fallida",
+  "reportingMonth": "Mes reportado",
+  "reportingYear": "Año reportado",
+  "save": "Guardar",
+  "savedRelationship": "Relación terminada exitosamente",
+  "sex": "Sexo",
+  "smoking": "Tabaquismo",
+  "smokingDuration": "Duración del Tabaquismo",
+  "socialHistory": "Historial Social",
+  "statusAtDischarge": "Estado al Alta",
+  "successfullyDeleted": "eliminado exitosamente",
+  "surgicalHistory": "Historial Quirúrgico",
+  "surgicalSummary": "Resumen Quirúrgico",
+  "tableView": "Vista de Tabla",
+  "tbScreening": "Resultado de tamizaje de TB",
+  "testApproach": "Enfoque de prueba",
+  "testDate": "Fecha de Prueba",
+  "testEntryPoint": "Punto de entrada",
+  "testingAtMaternity": "Prueba de VIH en maternidad",
+  "testingRecommended": "Prueba recomendada",
+  "testStrategy": "Estrategia",
+  "therapiesPrescribed": "Terapias Recetadas",
+  "timeRecorded": "Hora Registrada",
+  "total": "Total",
+  "totalPeers": "Total de Pares",
+  "tracingNumber": "N° de Seguimiento",
+  "tracingType": "Tipo de Seguimiento",
+  "typeOfSurgery": "Tipo de Cirugía",
+  "updateForm": "Modificar formulario",
+  "uterusCondition": "Condición uterina PPH",
+  "viewBeds": "Ver camas",
+  "viewEncounter": "Ver",
+  "visitDate": "Fecha de Tamizaje"
+}
