--- a/translations/en.json
+++ b/translations/en.json
@@ -31,6 +31,7 @@
   "bloodLoss": "Blood Transfusion Done",
   "bloodTransfusion": "Blood Transfusion",
   "caseEncounter": "Case management encounters",
+  "caseManager": "Case Manager",
   "causeOfDeath": "Cause of Death",
   "cervicalDilation": "Cervical Dilation cm",
   "chartView": "Chart View",
