--- a/translations/es.json
+++ b/translations/es.json
@@ -1,5 +1,5 @@
 {
-  " ": "Gestor de Casos",
+  "caseManager": "Gestor de Casos",
   "accidentOrTrauma": "Accidente o Trauma",
   "actions": "Acciones",
   "activeCases": "Casos activos",
