Actualizar el script de extracción de traducciones y agregar nuevas claves de traducción en en.json

--- a/translations/en.json
+++ b/translations/en.json
@@ -8,6 +8,7 @@
   "addPeer": "Add Peer",
   "addPNSContact": "Add PNS Contact",
   "addRelationship": "Add relationship",
+  "address": "Address",
   "admissionDate": "Admission Date",
   "admissionWard": "Admission Ward",
   "admittingDoctor": "Admitting Doctor",
@@ -19,17 +20,22 @@
   "allocation": "Allocation View",
   "ancVisitNumber": "ANC Visit Number",
   "antenatalCare": "Antenatal Care",
+  "apgarScore": "Apgar Score",
   "attachements": "Attachements",
   "autopsyReport": "Autopsy report",
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "baselineHivStatus": "Baseline HIV Status",
+  "baselineInformation": "Baseline Information",
+  "baselineStatus": "HIV Status",
   "beds": "Beds",
   "billingHistory": "Billing history",
   "birthInjuriesTrauma": "Birth Injuries/Trauma",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Transfusion Done",
   "bloodTransfusion": "Blood Transfusion",
+  "calculateBirthDate": "Calculate birth date",
   "caseEncounter": "Case management encounters",
+  "caseManagemet": "Case Management",
   "caseManager": "Case Manager",
   "causeOfDeath": "Cause of Death",
   "cervicalDilation": "Cervical Dilation cm",
@@ -41,6 +47,7 @@
   "compartment": "Compartment",
   "completed": "Completed",
   "completedDocumentations": "Completed Documentation",
+  "confirmationQuestion": "Are you sure you want to delete relationship?",
   "contact": "Contact",
   "contactCreated": "Contact created",
   "contacted": "Contacted",
@@ -50,15 +57,20 @@
   "dateAndTimeofDeath": "Date and time of death",
   "dateDate": "Date & time",
   "dateOfAdmission": "Date of admission",
+  "dateOfBirth": "Date of birth",
   "dateOfDelivery": "Date of Delivery",
+  "dateofend": "End Date",
+  "dateofstart": "Start Date",
   "dateOfSurgery": "Date of Surgery",
   "dateTime": "Date & time",
   "days": "Days",
   "dead": "Dead",
   "defaulterTracing": "Defaulter tracing",
   "delete": "Delete",
+  "deleteRelationship": "Delete Relationship",
   "deliveryDate": "Delivery Date",
   "deliveryOutcome": "Delivery Outcome",
+  "demographics": "Demographics",
   "department": "Department",
   "descentOfHead": "Descent of Head",
   "disabilities": "Disabilities",
@@ -67,6 +79,8 @@
   "dischargeForm": "Discharge form",
   "dischargingDoctor": "Discharging Doctor",
   "discontinuationCases": "Discontinuation cases",
+  "discontinue": "Discontinue",
+  "discontinued": "Discontinued",
   "edit": "Edit",
   "editEncounter": "Edit",
   "editForm": "Edit Form",
@@ -80,22 +94,30 @@
   "encounterType": "Encounter Type",
   "endDate": "End Date",
   "endRelationship": "End relationship",
+  "enrolled": "Enrolled",
   "enterForm": "Enter form",
   "error": "Error",
   "errorFetchingbedInformation": "Error fetching bed information",
   "facility": "Facility",
   "failedDeleting": "couldn't be deleted",
+  "family": "Family",
   "familyContacts": "Family contacts",
   "feedingOrders": "Feeding Orders",
+  "feedingStatus": "Feeding Status",
+  "female": "Female",
   "fetalHeartRate": "Fetal Heart Rate",
   "filterByForm": "Filter by form",
   "filterByStatus": "Filter by status",
+  "filterTable": "Filter table",
   "finalDiagnosis": "Final Diagnosis",
   "finalDischargeDiagnosis": "Final Discharge Diagnosis",
   "finalOutcome": "Final Outcome",
+  "firstName": "First name",
   "foetalPresentation": "Foetal Presentation",
   "followUpDate": "Next follow-up date",
   "formName": "Form Name",
+  "formTitle": "Fill in the form details",
+  "fromAge": "From Age",
   "gestationalSize": "Gestational Size",
   "hivStatus": "HIV Status",
   "hivTestResults": "HIV Status",
@@ -104,21 +126,30 @@
   "htsResult": "Final result",
   "htsScreening": "HTS Screening",
   "htsTestType": "Test type",
+  "inactiveCases": "Inactive Cases",
   "inPatient": "In Patient",
   "inPatientForms": "In-Patient Forms",
   "inPatientSummary": "In Patient Summary",
   "inPatientView": "In Patient View",
   "inPatientVisitMessage": "in-patient encounter found for current  {{visitType}} visit",
   "ipvOutcome": "IPV Outcome",
+  "ipvOutCome": "IPV Outcome",
+  "ipvQuestions": "IPV Questions",
   "labourAndDelivery": "Labour and Delivery",
+  "lastName": "Last name",
   "lengthofStay": "Length of stay",
   "listingDate": "Listing date",
   "livingWithClient": "Living with client",
   "loadData": "Loading summary data...",
+  "male": "Male",
   "managePeers": "Manage Peers",
+  "manager": "Case Manager",
+  "manageVaccinationSchedule": "Manage Schedule",
+  "maritalStatus": "Marital status",
   "maternalCondition": "Maternal Condition",
   "maternalSummary": "Maternal Summary",
   "medicalHistory": "Medical History",
+  "middleName": "Middle name",
   "missedAppointmentDate": "Date Missed Appointment",
   "modeOfDelivery": "Mode of Delivery",
   "mortician": "Mortician name",
@@ -126,31 +157,51 @@
   "mortuaryView": "Mortuary view",
   "motherGeneralCondition": "General condition",
   "name": "Name",
+  "names": "Names",
   "neonatalAbnormalities": "Neonatal Abnormalities",
+  "neonatalCare": "Neonatal Care",
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
   "nextPage": "Next page",
   "nextVisitDate": "Next visit date",
+  "no": "No",
+  "noActiveCasesToDisplay": "There is no active cases data to display.",
   "noContactToDisplay": "There is no contact data to display for this patient.",
   "noEncounters": "No encounters found",
   "noEncounterToDisplay": "There are no encounters to display for this patient.",
+  "noInActiveCasesToDisplay": "There is no inactive cases data to display.",
   "noObservationsFound": "No observations found",
+  "nopeers": "No peers to display for this peer educator",
+  "onDate": "On Date",
   "operatingDoctor": "Operating Doctor",
+  "optional": "opcional",
+  "other": "Other",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Abuse",
   "partnerStatus": "HIV status of partner)",
   "partograph": "Partograph",
   "partographData": "Vital Components",
+  "partographyDisplay": "Partography Displayed",
+  "patient": "Patient",
+  "patientNotFound": "Patient Not Found",
+  "patientPlaceHolder": "Search patient",
+  "peer": "Peer",
   "peerCalendar": "Peer Calendar",
+  "peerEducator": "Peer Educator",
+  "peers": "Peers",
   "pending": "Pending",
   "pendingDocumentations": "Pending Documentation",
+  "phoneNumber": "Phone number",
+  "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
   "placeOfDelivery": "Place of Delivery",
   "pnsAproach": "PNS Aproach",
+  "pnsContacts": "PNS Contacts",
   "populationType": "Population type",
   "postnatalCare": "Postnatal Care",
   "postOperativeComplications": "Post Operative Complications",
   "postOperativeDiagnosis": "Post Operative Diagnosis",
   "pphCondition": "PPH present",
+  "preferedPNSAproach": "Prefered PNS Aproach",
   "previousPage": "Previous page",
   "primaryDiagnosis": "Primary Diagnosis",
   "priorityOfAdmission": "Priority Of Admission",
@@ -159,19 +210,29 @@
   "recordLabourDetails": "Record labour details",
   "referrals": "Referrals",
   "relation": "Relation",
+  "relationship": "Relationship",
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to proceed?",
   "relationshipError": "Relationship Error",
   "relationshipErrorMessage": "Request Failed",
+  "relationshipType": "Relationship Type",
+  "relationToPatient": "Relation to patient",
   "releaseBody": "Release Body",
   "reportingMonth": "Month",
   "reportingYear": "Year",
+  "RlshipError": "Request Failed.......",
   "save": "Save",
   "savedRelationship": "Relationship ended successfully",
+  "savedRlship": "Relationship saved successfully",
+  "saveRlship": "Save Relationship",
   "sex": "Sex",
+  "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
   "smoking": "Smoking",
   "smokingDuration": "Smoking Duration",
   "socialHistory": "Social History",
+  "startDate": "Start Date",
+  "status": "Status",
   "statusAtDischarge": "Status at Discharge",
+  "submit": "Submit",
   "successfullyDeleted": "successfully deleted",
   "surgicalHistory": "Surgical History",
   "surgicalSummary": "Surgical Summary",
@@ -184,6 +245,7 @@
   "testingRecommended": "Testing recommended",
   "testStrategy": "Strategy",
   "therapiesPrescribed": "Therapies Prescribed",
+  "threatened": "2. Has he/she ever threatened to hurt you?",
   "timeRecorded": "Time Recorded",
   "total": "Total",
   "totalPeers": "Total Peers",
@@ -192,8 +254,11 @@
   "typeOfSurgery": "Type of Surgery",
   "updateForm": "Mordify form",
   "uterusCondition": "PPH Condition of uterus",
+  "vaccinationScheduleBuilder": "Vaccination Schedule",
   "viewBeds": "View beds",
   "viewEncounter": "View",
   "visitDate": "Screening Date",
-  "visitType": "Visit type"
+  "visitType": "Visit type",
+  "weight": "Weight (kg)",
+  "yes": "Yes"
 }
