--- a/translations/es.json
+++ b/translations/es.json
@@ -1,5 +1,4 @@
 {
-  "caseManager": "Gestor de Casos",
   "accidentOrTrauma": "Accidente o Trauma",
   "actions": "Acciones",
   "activeCases": "Casos activos",
@@ -8,6 +7,7 @@
   "addPeer": "Agregar Par",
   "addPNSContact": "Agregar Contacto PNS",
   "addRelationship": "Agregar relación",
+  "address": "Address",
   "admissionDate": "Fecha de Ingreso",
   "admissionWard": "Sala de Ingreso",
   "admittingDoctor": "Médico Admisor",
@@ -18,14 +18,20 @@
   "all": "Todos",
   "ancVisitNumber": "Número de Visita de Control Prenatal",
   "antenatalCare": "Control Prenatal",
+  "apgarScore": "Apgar Score",
   "babyGivenVitaminD": "Vitamina K Administrada al Bebé",
   "baselineHivStatus": "Estado VIH Basal",
+  "baselineInformation": "Baseline Information",
+  "baselineStatus": "HIV Status",
   "beds": "Camas",
   "birthInjuriesTrauma": "Traumatismos/lesiones al Nacer",
   "bloodGroup": "Grupo Sanguíneo",
   "bloodLoss": "Transfusión de Sangre Realizada",
   "bloodTransfusion": "Transfusión de Sangre",
+  "calculateBirthDate": "Calculate birth date",
   "caseEncounter": "Encuentros de gestión de casos",
+  "caseManagemet": "Case Management",
+  "caseManager": "Gestor de Casos",
   "causeOfDeath": "Causa de Muerte",
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
@@ -35,6 +41,7 @@
   "clinicalViews": "Vistas clínicas",
   "completed": "Completado",
   "completedDocumentations": "Documentación Completada",
+  "confirmationQuestion": "Are you sure you want to delete relationship?",
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
@@ -42,13 +49,18 @@
   "customViews": "En esta sección encontrarás vistas clínicas personalizadas según condiciones del paciente y programas de atención.",
   "date": "Fecha",
   "dateDate": "Fecha y hora",
+  "dateOfBirth": "Date of birth",
   "dateOfDelivery": "Fecha de Parto",
+  "dateofend": "End Date",
+  "dateofstart": "Start Date",
   "dateOfSurgery": "Fecha de Cirugía",
   "dead": "Fallecido",
   "defaulterTracing": "Seguimiento de Incumplidores",
   "delete": "Eliminar",
+  "deleteRelationship": "Delete Relationship",
   "deliveryDate": "Fecha de Parto",
   "deliveryOutcome": "Resultado del Parto",
+  "demographics": "Demographics",
   "department": "Departamento",
   "descentOfHead": "Descenso de la Cabeza",
   "disabilities": "Discapacidades",
@@ -56,6 +68,8 @@
   "dischargeDate": "Fecha de Alta",
   "dischargingDoctor": "Médico de Alta",
   "discontinuationCases": "Casos de discontinuación",
+  "discontinue": "Discontinue",
+  "discontinued": "Discontinued",
   "edit": "Editar",
   "editEncounter": "Editar",
   "editForm": "Editar Formulario",
@@ -69,22 +83,30 @@
   "encounterType": "Tipo de Encuentro",
   "endDate": "Fecha Final",
   "endRelationship": "Terminar relación",
+  "enrolled": "Enrolled",
   "enterForm": "Ingresar formulario",
   "error": "Error",
   "errorFetchingbedInformation": "Error al obtener información de camas",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
+  "family": "Family",
   "familyContacts": "Contactos familiares",
   "feedingOrders": "Órdenes de Alimentación",
+  "feedingStatus": "Feeding Status",
+  "female": "Female",
   "fetalHeartRate": "Frecuencia Cardíaca Fetal",
   "filterByForm": "Filtrar por formulario",
   "filterByStatus": "Filtrar por estado",
+  "filterTable": "Filter table",
   "finalDiagnosis": "Diagnóstico Final",
   "finalDischargeDiagnosis": "Diagnóstico Final al Alta",
   "finalOutcome": "Resultado Final",
+  "firstName": "First name",
   "foetalPresentation": "Presentación Fetal",
   "followUpDate": "Próxima fecha de seguimiento",
   "formName": "Nombre del Formulario",
+  "formTitle": "Fill in the form details",
+  "fromAge": "From Age",
   "gestationalSize": "Tamaño Gestacional",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
@@ -93,47 +115,76 @@
   "htsResult": "Resultado final",
   "htsScreening": "Tamizaje HTS",
   "htsTestType": "Tipo de prueba",
+  "inactiveCases": "Inactive Cases",
   "inPatient": "Paciente Internado",
   "inPatientForms": "Formularios de Paciente Internado",
   "inPatientSummary": "Resumen de Paciente Internado",
   "inPatientView": "Vista de Paciente Internado",
   "inPatientVisitMessage": "encuentro de paciente interno encontrado para la visita actual {{visitType}}",
   "ipvOutcome": "Resultado de IPV",
+  "ipvOutCome": "IPV Outcome",
+  "ipvQuestions": "IPV Questions",
   "labourAndDelivery": "Trabajo de Parto y Parto",
+  "lastName": "Last name",
   "listingDate": "Fecha de registro",
   "livingWithClient": "Convive con el paciente",
+  "male": "Male",
   "managePeers": "Gestionar Pares",
+  "manager": "Case Manager",
+  "manageVaccinationSchedule": "Manage Schedule",
+  "maritalStatus": "Marital status",
   "maternalCondition": "Condición Materna",
   "maternalSummary": "Resumen Materno",
   "medicalHistory": "Historial Médico",
+  "middleName": "Middle name",
   "missedAppointmentDate": "Fecha de Cita Incumplida",
   "modeOfDelivery": "Modalidad del Parto",
   "motherGeneralCondition": "Condición general de la madre",
   "name": "Nombre",
+  "names": "Names",
   "neonatalAbnormalities": "Anormalidades Neonatales",
+  "neonatalCare": "Neonatal Care",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
   "nextVisitDate": "Próxima fecha de visita",
+  "no": "No",
+  "noActiveCasesToDisplay": "There is no active cases data to display.",
   "noContactToDisplay": "No hay datos de contacto para mostrar",
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
+  "noInActiveCasesToDisplay": "There is no inactive cases data to display.",
   "noObservationsFound": "No se encontraron observaciones",
+  "nopeers": "No peers to display for this peer educator",
+  "onDate": "On Date",
   "operatingDoctor": "Médico Operador",
+  "optional": "opcional",
+  "other": "Other",
   "otherRelationships": "Otras Relaciones",
   "otherSubstanceAbuse": "Consumo de Otras Sustancias",
   "partnerStatus": "Estado VIH de la pareja",
   "partograph": "Partograma",
   "partographData": "Componentes Vitales",
+  "partographyDisplay": "Partography Displayed",
+  "patient": "Patient",
+  "patientNotFound": "Patient Not Found",
+  "patientPlaceHolder": "Search patient",
+  "peer": "Peer",
   "peerCalendar": "Calendario de Pares",
+  "peerEducator": "Peer Educator",
+  "peers": "Peers",
   "pending": "Pendiente",
   "pendingDocumentations": "Documentación Pendiente",
+  "phoneNumber": "Phone number",
+  "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
   "placeOfDelivery": "Lugar del Parto",
   "pnsAproach": "Enfoque PNS",
+  "pnsContacts": "PNS Contacts",
   "populationType": "Tipo de población",
   "postnatalCare": "Control Postnatal",
   "postOperativeComplications": "Complicaciones Postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico Postoperatorio",
   "pphCondition": "PPH presente",
+  "preferedPNSAproach": "Prefered PNS Aproach",
   "primaryDiagnosis": "Diagnóstico Primario",
   "priorityOfAdmission": "Prioridad de Ingreso",
   "provider": "Proveedor",
@@ -141,18 +192,28 @@
   "recordLabourDetails": "Registrar detalles del parto",
   "referrals": "Derivaciones",
   "relation": "Parentesco",
+  "relationship": "Relationship",
   "relationshipConfirmationText": "Esto terminará la relación. ¿Está seguro de continuar?",
   "relationshipError": "Error de Relación",
   "relationshipErrorMessage": "Solicitud Fallida",
+  "relationshipType": "Relationship Type",
+  "relationToPatient": "Relation to patient",
   "reportingMonth": "Mes reportado",
   "reportingYear": "Año reportado",
+  "RlshipError": "Request Failed.......",
   "save": "Guardar",
   "savedRelationship": "Relación terminada exitosamente",
+  "savedRlship": "Relationship saved successfully",
+  "saveRlship": "Save Relationship",
   "sex": "Sexo",
+  "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
   "smoking": "Tabaquismo",
   "smokingDuration": "Duración del Tabaquismo",
   "socialHistory": "Historial Social",
+  "startDate": "Start Date",
+  "status": "Status",
   "statusAtDischarge": "Estado al Alta",
+  "submit": "Submit",
   "successfullyDeleted": "eliminado exitosamente",
   "surgicalHistory": "Historial Quirúrgico",
   "surgicalSummary": "Resumen Quirúrgico",
@@ -165,6 +226,7 @@
   "testingRecommended": "Prueba recomendada",
   "testStrategy": "Estrategia",
   "therapiesPrescribed": "Terapias Recetadas",
+  "threatened": "2. Has he/she ever threatened to hurt you?",
   "timeRecorded": "Hora Registrada",
   "total": "Total",
   "totalPeers": "Total de Pares",
@@ -173,7 +235,10 @@
   "typeOfSurgery": "Tipo de Cirugía",
   "updateForm": "Modificar formulario",
   "uterusCondition": "Condición uterina PPH",
+  "vaccinationScheduleBuilder": "Vaccination Schedule",
   "viewBeds": "Ver camas",
   "viewEncounter": "Ver",
-  "visitDate": "Fecha de Tamizaje"
+  "visitDate": "Fecha de Tamizaje",
+  "weight": "Weight (kg)",
+  "yes": "Yes"
 }
