--- a/translations/es.json
+++ b/translations/es.json
@@ -7,7 +7,7 @@
   "addPeer": "Agregar Par",
   "addPNSContact": "Agregar Contacto PNS",
   "addRelationship": "Agregar relación",
-  "address": "Address",
+  "address": "Dirección",
   "admissionDate": "Fecha de Ingreso",
   "admissionWard": "Sala de Ingreso",
   "admittingDoctor": "Médico Admisor",
@@ -18,19 +18,19 @@
   "all": "Todos",
   "ancVisitNumber": "Número de Visita de Control Prenatal",
   "antenatalCare": "Control Prenatal",
-  "apgarScore": "Apgar Score",
+  "apgarScore": "Puntaje Apgar",
   "babyGivenVitaminD": "Vitamina K Administrada al Bebé",
   "baselineHivStatus": "Estado VIH Basal",
-  "baselineInformation": "Baseline Information",
-  "baselineStatus": "HIV Status",
+  "baselineInformation": "Información Basal",
+  "baselineStatus": "Estado VIH",
   "beds": "Camas",
   "birthInjuriesTrauma": "Traumatismos/lesiones al Nacer",
   "bloodGroup": "Grupo Sanguíneo",
   "bloodLoss": "Transfusión de Sangre Realizada",
   "bloodTransfusion": "Transfusión de Sangre",
-  "calculateBirthDate": "Calculate birth date",
+  "calculateBirthDate": "Calcular fecha de nacimiento",
   "caseEncounter": "Encuentros de gestión de casos",
-  "caseManagemet": "Case Management",
+  "caseManagemet": "Gestión de Casos",
   "caseManager": "Gestor de Casos",
   "causeOfDeath": "Causa de Muerte",
   "cervicalDilation": "Dilatación Cervical (cm)",
@@ -41,7 +41,7 @@
   "clinicalViews": "Vistas clínicas",
   "completed": "Completado",
   "completedDocumentations": "Documentación Completada",
-  "confirmationQuestion": "Are you sure you want to delete relationship?",
+  "confirmationQuestion": "¿Está seguro de que desea eliminar la relación?",
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
@@ -49,18 +49,18 @@
   "customViews": "En esta sección encontrarás vistas clínicas personalizadas según condiciones del paciente y programas de atención.",
   "date": "Fecha",
   "dateDate": "Fecha y hora",
-  "dateOfBirth": "Date of birth",
+  "dateOfBirth": "Fecha de nacimiento",
   "dateOfDelivery": "Fecha de Parto",
-  "dateofend": "End Date",
-  "dateofstart": "Start Date",
+  "dateofend": "Fecha de Finalización",
+  "dateofstart": "Fecha de Inicio",
   "dateOfSurgery": "Fecha de Cirugía",
   "dead": "Fallecido",
   "defaulterTracing": "Seguimiento de Incumplidores",
   "delete": "Eliminar",
-  "deleteRelationship": "Delete Relationship",
+  "deleteRelationship": "Eliminar relación",
   "deliveryDate": "Fecha de Parto",
   "deliveryOutcome": "Resultado del Parto",
-  "demographics": "Demographics",
+  "demographics": "Datos demográficos",
   "department": "Departamento",
   "descentOfHead": "Descenso de la Cabeza",
   "disabilities": "Discapacidades",
@@ -68,8 +68,8 @@
   "dischargeDate": "Fecha de Alta",
   "dischargingDoctor": "Médico de Alta",
   "discontinuationCases": "Casos de discontinuación",
-  "discontinue": "Discontinue",
-  "discontinued": "Discontinued",
+  "discontinue": "Descontinuar",
+  "discontinued": "Descontinuado",
   "edit": "Editar",
   "editEncounter": "Editar",
   "editForm": "Editar Formulario",
@@ -83,30 +83,30 @@
   "encounterType": "Tipo de Encuentro",
   "endDate": "Fecha Final",
   "endRelationship": "Terminar relación",
-  "enrolled": "Enrolled",
+  "enrolled": "Inscrito",
   "enterForm": "Ingresar formulario",
   "error": "Error",
   "errorFetchingbedInformation": "Error al obtener información de camas",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
-  "family": "Family",
+  "family": "Familia",
   "familyContacts": "Contactos familiares",
   "feedingOrders": "Órdenes de Alimentación",
-  "feedingStatus": "Feeding Status",
-  "female": "Female",
+  "feedingStatus": "Estado de Alimentación",
+  "female": "Mujer",
   "fetalHeartRate": "Frecuencia Cardíaca Fetal",
   "filterByForm": "Filtrar por formulario",
   "filterByStatus": "Filtrar por estado",
-  "filterTable": "Filter table",
+  "filterTable": "Filtrar tabla",
   "finalDiagnosis": "Diagnóstico Final",
   "finalDischargeDiagnosis": "Diagnóstico Final al Alta",
   "finalOutcome": "Resultado Final",
-  "firstName": "First name",
+  "firstName": "Nombre",
   "foetalPresentation": "Presentación Fetal",
   "followUpDate": "Próxima fecha de seguimiento",
   "formName": "Nombre del Formulario",
-  "formTitle": "Fill in the form details",
-  "fromAge": "From Age",
+  "formTitle": "Complete los detalles del formulario",
+  "fromAge": "Desde Edad",
   "gestationalSize": "Tamaño Gestacional",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
@@ -115,76 +115,76 @@
   "htsResult": "Resultado final",
   "htsScreening": "Tamizaje HTS",
   "htsTestType": "Tipo de prueba",
-  "inactiveCases": "Inactive Cases",
+  "inactiveCases": "Casos Inactivos",
   "inPatient": "Paciente Internado",
   "inPatientForms": "Formularios de Paciente Internado",
   "inPatientSummary": "Resumen de Paciente Internado",
   "inPatientView": "Vista de Paciente Internado",
   "inPatientVisitMessage": "encuentro de paciente interno encontrado para la visita actual {{visitType}}",
   "ipvOutcome": "Resultado de IPV",
-  "ipvOutCome": "IPV Outcome",
-  "ipvQuestions": "IPV Questions",
+  "ipvOutCome": "Resultado de IPV",
+  "ipvQuestions": "Preguntas IPV",
   "labourAndDelivery": "Trabajo de Parto y Parto",
-  "lastName": "Last name",
+  "lastName": "Apellido",
   "listingDate": "Fecha de registro",
   "livingWithClient": "Convive con el paciente",
-  "male": "Male",
+  "male": "Hombre",
   "managePeers": "Gestionar Pares",
-  "manager": "Case Manager",
-  "manageVaccinationSchedule": "Manage Schedule",
-  "maritalStatus": "Marital status",
+  "manager": "Gestor de casos",
+  "manageVaccinationSchedule": "Gestionar Agenda",
+  "maritalStatus": "Estado civil",
   "maternalCondition": "Condición Materna",
   "maternalSummary": "Resumen Materno",
   "medicalHistory": "Historial Médico",
-  "middleName": "Middle name",
+  "middleName": "Segundo nombre",
   "missedAppointmentDate": "Fecha de Cita Incumplida",
   "modeOfDelivery": "Modalidad del Parto",
   "motherGeneralCondition": "Condición general de la madre",
   "name": "Nombre",
-  "names": "Names",
+  "names": "Nombres",
   "neonatalAbnormalities": "Anormalidades Neonatales",
-  "neonatalCare": "Neonatal Care",
+  "neonatalCare": "Cuidado Neonatal",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
   "nextVisitDate": "Próxima fecha de visita",
   "no": "No",
-  "noActiveCasesToDisplay": "There is no active cases data to display.",
+  "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
   "noContactToDisplay": "No hay datos de contacto para mostrar",
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
-  "noInActiveCasesToDisplay": "There is no inactive cases data to display.",
+  "noInActiveCasesToDisplay": "No hay datos de casos inactivos para mostrar.",
   "noObservationsFound": "No se encontraron observaciones",
-  "nopeers": "No peers to display for this peer educator",
-  "onDate": "On Date",
+  "nopeers": "No hay pares para mostrar para este educador de pares",
+  "onDate": "En la fecha",
   "operatingDoctor": "Médico Operador",
   "optional": "opcional",
-  "other": "Other",
+  "other": "Otro",
   "otherRelationships": "Otras Relaciones",
   "otherSubstanceAbuse": "Consumo de Otras Sustancias",
   "partnerStatus": "Estado VIH de la pareja",
   "partograph": "Partograma",
   "partographData": "Componentes Vitales",
-  "partographyDisplay": "Partography Displayed",
-  "patient": "Patient",
-  "patientNotFound": "Patient Not Found",
-  "patientPlaceHolder": "Search patient",
-  "peer": "Peer",
+  "partographyDisplay": "Partograma mostrado",
+  "patient": "Paciente",
+  "patientNotFound": "Paciente no encontrado",
+  "patientPlaceHolder": "Buscar paciente",
+  "peer": "Par",
   "peerCalendar": "Calendario de Pares",
-  "peerEducator": "Peer Educator",
-  "peers": "Peers",
+  "peerEducator": "Educador de Pares",
+  "peers": "Pares",
   "pending": "Pendiente",
   "pendingDocumentations": "Documentación Pendiente",
-  "phoneNumber": "Phone number",
-  "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
+  "phoneNumber": "Número de teléfono",
+  "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
   "placeOfDelivery": "Lugar del Parto",
   "pnsAproach": "Enfoque PNS",
-  "pnsContacts": "PNS Contacts",
+  "pnsContacts": "Contactos PNS",
   "populationType": "Tipo de población",
   "postnatalCare": "Control Postnatal",
   "postOperativeComplications": "Complicaciones Postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico Postoperatorio",
   "pphCondition": "PPH presente",
-  "preferedPNSAproach": "Prefered PNS Aproach",
+  "preferedPNSAproach": "Enfoque PNS Preferido",
   "primaryDiagnosis": "Diagnóstico Primario",
   "priorityOfAdmission": "Prioridad de Ingreso",
   "provider": "Proveedor",
@@ -192,28 +192,28 @@
   "recordLabourDetails": "Registrar detalles del parto",
   "referrals": "Derivaciones",
   "relation": "Parentesco",
-  "relationship": "Relationship",
+  "relationship": "Relación",
   "relationshipConfirmationText": "Esto terminará la relación. ¿Está seguro de continuar?",
   "relationshipError": "Error de Relación",
   "relationshipErrorMessage": "Solicitud Fallida",
-  "relationshipType": "Relationship Type",
-  "relationToPatient": "Relation to patient",
+  "relationshipType": "Tipo de Relación",
+  "relationToPatient": "Relación con el paciente",
   "reportingMonth": "Mes reportado",
   "reportingYear": "Año reportado",
-  "RlshipError": "Request Failed.......",
+  "RlshipError": "Falla en la solicitud...",
   "save": "Guardar",
   "savedRelationship": "Relación terminada exitosamente",
-  "savedRlship": "Relationship saved successfully",
-  "saveRlship": "Save Relationship",
+  "savedRlship": "Relación guardada con éxito",
+  "saveRlship": "Guardar Relación",
   "sex": "Sexo",
-  "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
+  "sexualAssault": "3. ¿Alguna vez él/ella le ha obligado a hacer algo sexual que le haya hecho sentir incómodo/a?",
   "smoking": "Tabaquismo",
   "smokingDuration": "Duración del Tabaquismo",
   "socialHistory": "Historial Social",
-  "startDate": "Start Date",
-  "status": "Status",
+  "startDate": "Fecha de Inicio",
+  "status": "Estado",
   "statusAtDischarge": "Estado al Alta",
-  "submit": "Submit",
+  "submit": "Enviar",
   "successfullyDeleted": "eliminado exitosamente",
   "surgicalHistory": "Historial Quirúrgico",
   "surgicalSummary": "Resumen Quirúrgico",
@@ -226,7 +226,7 @@
   "testingRecommended": "Prueba recomendada",
   "testStrategy": "Estrategia",
   "therapiesPrescribed": "Terapias Recetadas",
-  "threatened": "2. Has he/she ever threatened to hurt you?",
+  "threatened": "2. ¿Alguna vez él/ella ha amenazado con hacerle daño?",
   "timeRecorded": "Hora Registrada",
   "total": "Total",
   "totalPeers": "Total de Pares",
@@ -235,10 +235,10 @@
   "typeOfSurgery": "Tipo de Cirugía",
   "updateForm": "Modificar formulario",
   "uterusCondition": "Condición uterina PPH",
-  "vaccinationScheduleBuilder": "Vaccination Schedule",
+  "vaccinationScheduleBuilder": "Agenda de Vacunación",
   "viewBeds": "Ver camas",
   "viewEncounter": "Ver",
   "visitDate": "Fecha de Tamizaje",
-  "weight": "Weight (kg)",
-  "yes": "Yes"
+  "weight": "Peso (kg)",
+  "yes": "Sí"
 }
