--- a/translations/es.json
+++ b/translations/es.json
@@ -4,6 +4,8 @@
   "activeCases": "Casos activos",
   "add": "Agregar",
   "addCase": "Agregar caso",
+  "additionalHealthServices": "Prestaciones Adicionales de Salud",
+  "addNewVaccine": "Add new vaccine",
   "addPeer": "Agregar Par",
   "addPNSContact": "Agregar Contacto PNS",
   "addRelationship": "Agregar relación",
@@ -16,9 +18,12 @@
   "alcoholUseDuration": "Duración de Consumo de Alcohol",
   "alive": "Vivo",
   "all": "Todos",
+  "alturaUterina": "Altura Uterina (cm)",
   "ancVisitNumber": "Número de Visita de Control Prenatal",
+  "Antecedentes": "Antecedentes",
   "antenatalCare": "Control Prenatal",
   "apgarScore": "Puntaje Apgar",
+  "AtencionesPrenatales": "Atenciones Prenatales",
   "babyGivenVitaminD": "Vitamina K Administrada al Bebé",
   "baselineHivStatus": "Estado VIH Basal",
   "baselineInformation": "Información Basal",
@@ -29,6 +34,7 @@
   "bloodLoss": "Transfusión de Sangre Realizada",
   "bloodTransfusion": "Transfusión de Sangre",
   "calculateBirthDate": "Calcular fecha de nacimiento",
+  "cancel": "Cancel",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagemet": "Gestión de Casos",
   "caseManager": "Gestor de Casos",
@@ -36,16 +42,22 @@
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
   "chronicDisease": "Enfermedad Crónica",
+  "clean": "Clean",
   "clientEligibility": "Elegible",
   "clinicalEncounter": "Encuentro Clínico",
   "clinicalViews": "Vistas clínicas",
   "completed": "Completado",
   "completedDocumentations": "Documentación Completada",
+  "comprehensiveCareFollowUp": "Seguimiento de Atención Integral",
+  "confirmAppointment": "Confirmar Cita",
   "confirmationQuestion": "¿Está seguro de que desea eliminar la relación?",
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
   "contactList": "Lista de contactos",
+  "credControl": "Control CRED",
+  "CronogramaPrenatal": "Cronograma Prenatal",
+  "Cuidado prenatal": "Cuidado prenatal",
   "customViews": "En esta sección encontrarás vistas clínicas personalizadas según condiciones del paciente y programas de atención.",
   "date": "Fecha",
   "dateDate": "Fecha y hora",
@@ -70,6 +82,8 @@
   "discontinuationCases": "Casos de discontinuación",
   "discontinue": "Descontinuar",
   "discontinued": "Descontinuado",
+  "dose": "Dosis",
+  "edadGestacional": "Edad Gestacional (semanas)",
   "edit": "Editar",
   "editEncounter": "Editar",
   "editForm": "Editar Formulario",
@@ -85,12 +99,15 @@
   "endRelationship": "Terminar relación",
   "enrolled": "Inscrito",
   "enterForm": "Ingresar formulario",
+  "epicrisis": "Epicrisis",
   "error": "Error",
   "errorFetchingbedInformation": "Error al obtener información de camas",
+  "evaluationOrdersNotes": "Valoración, Órdenes y Exámenes",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
   "family": "Familia",
   "familyContacts": "Contactos familiares",
+  "fechaYHoraAtencion": "Fecha y hora atención",
   "feedingOrders": "Órdenes de Alimentación",
   "feedingStatus": "Estado de Alimentación",
   "female": "Mujer",
@@ -106,8 +123,10 @@
   "followUpDate": "Próxima fecha de seguimiento",
   "formName": "Nombre del Formulario",
   "formTitle": "Complete los detalles del formulario",
+  "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
   "fromAge": "Desde Edad",
   "gestationalSize": "Tamaño Gestacional",
+  "GraficasObstétricas": "Graficas Obstétricas",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
   "htsClinicalView": "Vista Clínica HTS",
@@ -128,6 +147,7 @@
   "lastName": "Apellido",
   "listingDate": "Fecha de registro",
   "livingWithClient": "Convive con el paciente",
+  "loading": "Loading",
   "male": "Hombre",
   "managePeers": "Gestionar Pares",
   "manager": "Gestor de casos",
@@ -146,6 +166,7 @@
   "neonatalCare": "Cuidado Neonatal",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
+  "newbornCare": "Atención del Recién Nacido",
   "nextVisitDate": "Próxima fecha de visita",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
@@ -153,8 +174,12 @@
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
   "noInActiveCasesToDisplay": "No hay datos de casos inactivos para mostrar.",
+  "nonCredControl": "Control No CRED",
   "noObservationsFound": "No se encontraron observaciones",
   "nopeers": "No hay pares para mostrar para este educador de pares",
+  "noSchemas": "No schemas available",
+  "noSearchItems": "No vaccines found",
+  "Nueva Atención Prenatal": "Nueva Atención Prenatal",
   "onDate": "En la fecha",
   "operatingDoctor": "Médico Operador",
   "optional": "opcional",
@@ -180,11 +205,13 @@
   "pnsAproach": "Enfoque PNS",
   "pnsContacts": "Contactos PNS",
   "populationType": "Tipo de población",
+  "posición": "Posición (O/I/NA)",
   "postnatalCare": "Control Postnatal",
   "postOperativeComplications": "Complicaciones Postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico Postoperatorio",
   "pphCondition": "PPH presente",
   "preferedPNSAproach": "Enfoque PNS Preferido",
+  "presentación": "Presentación (C/P/NA)",
   "primaryDiagnosis": "Diagnóstico Primario",
   "priorityOfAdmission": "Prioridad de Ingreso",
   "provider": "Proveedor",
@@ -205,8 +232,21 @@
   "savedRelationship": "Relación terminada exitosamente",
   "savedRlship": "Relación guardada con éxito",
   "saveRlship": "Guardar Relación",
+  "scheduleVaccination": "Programar Cita de Vacunación",
+  "schemaBuilder": "Vaccination Schema Builder",
+  "searchConcepts": "Search Concepts",
+  "searchError": "An error occurred while searching.",
+  "searchSchemas": "Search Schemas",
+  "searchVaccination": "Search Vaccine",
+  "searchVaccines": "Search Vaccines",
+  "selectConcept": "Select a Concept",
+  "selectDateAndTime": "Selecciona una fecha y hora para la cita",
+  "selectSchema": "Select a Schema",
+  "selectVaccine": "Select a Vaccine",
   "sex": "Sexo",
   "sexualAssault": "3. ¿Alguna vez él/ella le ha obligado a hacer algo sexual que le haya hecho sentir incómodo/a?",
+  "sinAtenciones": "Atenciones prenatales",
+  "situación": "Situación (L,T,NA)",
   "smoking": "Tabaquismo",
   "smokingDuration": "Duración del Tabaquismo",
   "socialHistory": "Historial Social",
@@ -215,6 +255,7 @@
   "statusAtDischarge": "Estado al Alta",
   "submit": "Enviar",
   "successfullyDeleted": "eliminado exitosamente",
+  "summaryMonitoring": "Resumen y Monitoreo",
   "surgicalHistory": "Historial Quirúrgico",
   "surgicalSummary": "Resumen Quirúrgico",
   "tableView": "Vista de Tabla",
@@ -235,7 +276,11 @@
   "typeOfSurgery": "Tipo de Cirugía",
   "updateForm": "Modificar formulario",
   "uterusCondition": "Condición uterina PPH",
+  "uuid": "UUID",
+  "vaccinationSchedule": "Calendario de Vacunación",
   "vaccinationScheduleBuilder": "Agenda de Vacunación",
+  "vaccine": "Vacuna",
+  "vaccineCalendar": "Calendario de Vacunas del Niño",
   "viewBeds": "Ver camas",
   "viewEncounter": "Ver",
   "visitDate": "Fecha de Tamizaje",
